<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/procent_obrazek"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
 		android:layout_marginTop="76dp"
        android:max="30"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:progress="30"
         />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar1"
        android:layout_marginTop="42dp"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/przelKwota"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/oknoCeny"
        android:layout_marginTop="20dp"
        android:text="@string/kwotaBrutto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/kwotaVat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/oknoCeny"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/oknoCeny2"
        android:ems="10"
        android:hint="@string/kwota"
        android:inputType="phone|numberDecimal"
	    android:digits="1234567890."
	    android:singleLine="true"
        android:selectAllOnFocus="true"
        android:soundEffectsEnabled="true"
        android:textSize="14sp"
         >
    </EditText>
<!-- 
    <ToggleButton
        android:id="@+id/butStawka1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="24dp"
        android:layout_marginTop="11dp"
        android:onClick="zmianaStawek"
        android:textOff="od 2011"
        android:textOn="do 2010" />
 -->
     
     <Button
        android:id="@+id/butZmianaStawki"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="11dp"
        android:layout_marginTop="11dp"
        android:text="@string/wybor" />

    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/butZmianaStawki"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/stawkaPodatku"
        android:textSize="30sp"
        android:typeface="serif" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="1dp"
        android:text="@string/spacja"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="30dp"
        android:text="@string/kwotaBrutto2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        
        android:layout_marginTop="20dp"
        android:text="@string/kwotaNetto2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_alignLeft="@+id/TextView02"        
        android:layout_below="@+id/TextView02"
        
        android:layout_marginTop="20dp"
        android:text="@string/kwotaVat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/oknoCeny2"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_toRightOf="@+id/TextView01"
        android:layout_alignBaseline="@+id/TextView01"
        android:ems="10"
        android:layout_marginLeft="6dp"
        android:hint="@string/kwota"
    	android:inputType="phone"
    	android:digits="1234567890."
    	android:singleLine="true"
        android:selectAllOnFocus="true"
        android:nextFocusForward="@+id/oknoCeny2"
		android:textSize="14sp"
        />
 




</RelativeLayout>